# moe_infer

./: .gitignore  BENCH.md  CLAUDE.md  Cargo.toml  Makefile  README.md  REASONIX.md  REPORT.md  autotune.py  bench.py  bench_engine.py  bench_perf.py  chat.py  chat_rs.py  example.py  prompt.txt  pyproject.toml  quantize.py  setup.py  verify.py  verify_2tok.py  verify_gemma4_dense.py  verify_gemma4_dense_stripped.py  verify_hidden_states.py  verify_nway.py  verify_per_layer.py  vision_demo.py
coreml_experiment/: .gitignore  README.md  STATUS.md  bench_8b.py  bench_anemll.py  bench_anemll_vs_mlx.py  bench_omlx_vs_mlx.py  bench_power.sh  bench_qwen3_power.py  convert.py  probe_decode_cost.py  probe_prefill_cost.py  qwen25.py  smoke_test.py  spec_decode.py
experiment/: .gitignore  SPEC_DECODE_FINDINGS.md  backend.go  bandit_baselines.py  bench.go  bench_3b.py  bench_omlx_concurrent.py  bench_omlx_prefix_cache.py  bench_vibethinker_tps.py  gen_bandit.py  go.mod  harness.go  kill_queue.sh  run_queue.sh  verify_qwen25.py
helpers/: avail_models.py  bench_io.py  bench_prefill.py  chat.py  compare_cpu_ref.py  convert.py  cpu_debug_test.py  dump_mlx_intermediates.py  export_tokenizer.py  extract_weights.py  gen_config.py  gen_model_config.py  gen_optimizations.py  gen_shaders.py  generate.py  quantize_from_hf.py  quantize_weights.py  repack_experts_4bit.py  strip_model.py
metal_infer/: extract_weights.py  infer.m  main.m  model_config.h  pack_experts.py  repack_experts_2bit.py
moe_infer/: __init__.py  _core.py  convert.py  core.c  core.pyx  dequantize.py  generation.py  hub.py  model.py  pipeline.py  sampling.py  strip.py
moe_infer/core_src/: attention.h  common.h  config.h  embeddings.h  expert_io.h  gpu_ops.h  layer_forward.h  metal_setup.h  model_config.h  model_weights.h  moe_infer_c.h  moe_infer_c.m  shaders.h  util.h
moe_infer/gemma4_dense/: __init__.py  strip.py
moe_infer/gemma4_moe/: __init__.py  dequantize.py  pipeline.py  strip.py
moe_infer/helpers/: __init__.py  analyze_expert_lowrank.py  analyze_rotated_quant.py  bench_axes.py  bench_llamacpp_throughput.py  bench_mtp.py  bench_profile.py  compress_experts_lz4.py  convert.py  extract_weights.py  quantize_from_hf.py  repack_experts_2bit.py  verifier.py  verify_gemma4.py  verify_qwen35_dense.py  verify_vs_original.py
moe_infer/qwen35_moe/: __init__.py  pipeline.py  vision.py
moe_infer_c/: bench  bench.m  model_config.json  model_weights.json  packed_experts  patch_bench.py
moe_infer_mlx/: __init__.py  convert.py  core.pyx  model.py
moe_infer_mlx/convert/: repack_experts_4bit.py
moe_infer_mlx/core_src/: attention.h  config.h  cpu_kernels.h  embeddings.h  expert_io.h  generate.h  gpu_ops.h  layer_forward.h  metal_setup.h  model_config.h  moe_infer_c.h  moe_infer_c.m  util.h
moe_infer_rs/: Cargo.toml  bench_c.py  pyproject.toml
moe_infer_rs/src/: attention.rs  cache.rs  config.rs  constants.rs  cpu_forward.rs  embeddings.rs  engine.rs  error.rs  expert.rs  expert_io.rs  full_forward.rs  generate.rs  gpu_forward.rs  gpu_ops.rs  kernels.rs  lib.rs  main.rs  math_util.rs  metal.rs  metal_context.rs  metal_kernels.rs  model.rs  moe.rs  pipeline_common.rs  pipeline_cpu.rs  pipeline_fusedexp.rs  pipeline_fusedwoods.rs  pipeline_gpu.rs  python_bindings.rs  quant.rs  quantize.rs  quantize_pipeline.rs  server.rs  timer.rs  tokenizer.rs  types.rs  weights.rs
moe_infer_rs/src/engine/: cpu.rs  engine_cpu.rs  engine_fusedexp.rs  engine_fusedwoods.rs  fusedexp.rs  fusedwoods.rs  mod.rs  qwen35_moe.rs
moe_infer_rs/src/engine/qwen35_moe/: constants.rs  cpu.rs  fused_4bit.rs  fused_4bit_exp1.rs  fused_4bit_exp2.rs  fused_4bit_exp3.rs  fused_bq4_exp2.rs  fusedexp.rs  fusedwoods.rs  metal_context.rs  metal_kernels.rs  mod.rs  shaders.metal
moe_infer_rs/src/math/: full_attention.rs  linear_attention.rs  lm_head.rs  math.rs  moe.rs  sample.rs  util.rs
moe_infer_rs/src/metal_util/: context.rs
moe_infer_rs/src/model/: config.rs  expert.rs  model_config.rs  model_weights.rs
quant/: README.md  quantize.py
reports/: Makefile  REPORT.md  hopfield.tex  report.tex
src/: attention.h  cache.rs  config.h  constants.rs  cpu_kernels.h  dtype.rs  embeddings.h  engine.rs  error.rs  expert_io.h  flag.h  gpu_ops.h  hf_util.rs  infer.m  layer_forward.h  lib.rs  main.m  metal_setup.h  model.rs  model_config.h  moe_forward.h  moe_infer_c.m  optimization.h  python_bindings.rs  quant.rs  quantize.rs  safetensors.rs  server.h  shaders.metal  tensors.h  timer.rs  util.h  vocab.h
(+49 files in other folders)
