[package]
name = "_moe_infer_rs"
version = "0.1.0"
edition = "2021"
description = "Rust port of Flash-MoE Metal inference engine for MoE models on Apple Silicon"

[lib]
name = "_moe_infer_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
python-bindings = ["pyo3", "numpy"]

[dependencies]
metal = "0.33"
objc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rayon = "1"
libc = "0.2"
memmap2 = "0.9"
lz4_flex = "0.11"
rand = "0.8"
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py38"], optional = true }
numpy = { version = "0.24", optional = true }
ndarray = "0.16"
tempfile = "3.27.0"
ureq = "3"
indicatif = "0.18.4"
