# [build-system]
# requires = ["maturin>=1.0,<2.0"]
# build-backend = "maturin"

# [tool.maturin]
# manifest-path = "moe_infer_rs/Cargo.toml"

[project]
name = "moe-infer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
   "fastapi>=0.136.3",
   "jinja2>=3.1.6",
   "lz4>=4.4.5",
   "maturin>=1.13.3",
   "mlx-lm>=0.31.3",
   "numpy>=2.2.6",
   "openai>=2.38.0",
   "torch>=2.12.0",
   "torchvision>=0.27.0",
   "transformers>=5.9.0",
]
