[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["python-bindings"]

[project]
name = "moe_infer"
version = "0.1.0"
requires-python = ">=3.10"

[project.optional-dependencies]
serve = [
   "fastapi>=0.136.3",
   "jinja2>=3.1.6",
]
mlx = [
   "mlx-lm>=0.31.3",
]
torch = [
   "torch>=2.12.0",
   "torchvision>=0.27.0",
   "transformers>=5.9.0",
]
all = [
   "moe_infer[serve,mlx,torch]",
   "lz4>=4.4.5",
   "numpy>=2.2.6",
]
