[package]
name = "moe_infer_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "moe_infer_rs"
crate-type = ["cdylib"]

[features]
python = ["pyo3/extension-module"]
timing = []

[dependencies]
pyo3 = { version = "0.28" }
metal = "0.29"
objc = "0.2"
objc-foundation = "0.1"
half = "2"
bytemuck = "1"
parking_lot = "0.12"
lz4_flex = "0.11"
numpy = "0.28"
libc = "0.2"
rand = "0.8"
