[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "moe_infer_rs"
requires-python = ">=3.10"
version = "0.1.0"
description = "Flash-MoE inference engine — Rust port"
license = { text = "MIT" }

[tool.maturin]
features = ["python"]
module-name = "moe_infer_rs"
